--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.20.8",
+    "@react-navigation/bottom-tabs": "^6.5.17",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "expo": "~50.0.8",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-redux": "^9.1.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
