--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "elearningapplication",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.17",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
+    "expo-av": "~13.10.6",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-redux": "^9.1.0",
+    "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-razorpay": "^2.3.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-safe-area-context": "4.8.2"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
