--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-markdown-display": "^7.0.2",
     "react-native-razorpay": "^2.3.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0"
