--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-star-rating": "^1.1.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
