--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
@@ -29,7 +30,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-star-rating": "^1.1.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "expo-print": "~12.8.1",
+    "expo-sharing": "~11.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
