--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.17",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
@@ -18,21 +19,25 @@
     "expo-av": "~13.10.6",
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
+    "expo-print": "~12.8.1",
+    "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-circular-progress": "^1.4.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-razorpay": "^2.3.0",
+    "react-native-reanimated": "^3.12.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-star-rating": "^1.1.0",
-    "react-redux": "^9.1.0",
-    "expo-print": "~12.8.1",
-    "expo-sharing": "~11.10.0"
+    "react-native-svg": "^15.3.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
